Add right section

--- a/index.html
+++ b/index.html
@@ -53,18 +53,34 @@
     </div>
   </header>
   <div class="wrapper">
-  <main>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, necessitatibus et! Labore minus, expedita aliquam a voluptatem accusamus delectus nostrum ipsum ut culpa at officia odio, autem laudantium repellat corporis voluptas harum accusantium eum. Aliquid esse molestias sit veritatis officia laborum, voluptatum labore odit non in suscipit. Impedit architecto doloremque velit ipsa ipsum necessitatibus at tempore, quisquam ex maiores in deleniti autem voluptates enim quia adipisci similique cupiditate ratione mollitia quae earum. Reprehenderit unde reiciendis atque architecto sunt ipsam dolorum ex autem impedit neque accusamus magnam quisquam voluptates ipsum fugit similique quas quae, doloribus sequi veniam cum officia. Asperiores, itaque.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, necessitatibus et! Labore minus, expedita aliquam a voluptatem accusamus delectus nostrum ipsum ut culpa at officia odio, autem laudantium repellat corporis voluptas harum accusantium eum. Aliquid esse molestias sit veritatis officia laborum, voluptatum labore odit non in suscipit. Impedit architecto doloremque velit ipsa ipsum necessitatibus at tempore, quisquam ex maiores in deleniti autem voluptates enim quia adipisci similique cupiditate ratione mollitia quae earum. Reprehenderit unde reiciendis atque architecto sunt ipsam dolorum ex autem impedit neque accusamus magnam quisquam voluptates ipsum fugit similique quas quae, doloribus sequi veniam cum officia. Asperiores, itaque.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, necessitatibus et! Labore minus, expedita aliquam a voluptatem accusamus delectus nostrum ipsum ut culpa at officia odio, autem laudantium repellat corporis voluptas harum accusantium eum. Aliquid esse molestias sit veritatis officia laborum, voluptatum labore odit non in suscipit. Impedit architecto doloremque velit ipsa ipsum necessitatibus at tempore, quisquam ex maiores in deleniti autem voluptates enim quia adipisci similique cupiditate ratione mollitia quae earum. Reprehenderit unde reiciendis atque architecto sunt ipsam dolorum ex autem impedit neque accusamus magnam quisquam voluptates ipsum fugit similique quas quae, doloribus sequi veniam cum officia. Asperiores, itaque.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, necessitatibus et! Labore minus, expedita aliquam a voluptatem accusamus delectus nostrum ipsum ut culpa at officia odio, autem laudantium repellat corporis voluptas harum accusantium eum. Aliquid esse molestias sit veritatis officia laborum, voluptatum labore odit non in suscipit. Impedit architecto doloremque velit ipsa ipsum necessitatibus at tempore, quisquam ex maiores in deleniti autem voluptates enim quia adipisci similique cupiditate ratione mollitia quae earum. Reprehenderit unde reiciendis atque architecto sunt ipsam dolorum ex autem impedit neque accusamus magnam quisquam voluptates ipsum fugit similique quas quae, doloribus sequi veniam cum officia. Asperiores, itaque.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, necessitatibus et! Labore minus, expedita aliquam a voluptatem accusamus delectus nostrum ipsum ut culpa at officia odio, autem laudantium repellat corporis voluptas harum accusantium eum. Aliquid esse molestias sit veritatis officia laborum, voluptatum labore odit non in suscipit. Impedit architecto doloremque velit ipsa ipsum necessitatibus at tempore, quisquam ex maiores in deleniti autem voluptates enim quia adipisci similique cupiditate ratione mollitia quae earum. Reprehenderit unde reiciendis atque architecto sunt ipsam dolorum ex autem impedit neque accusamus magnam quisquam voluptates ipsum fugit similique quas quae, doloribus sequi veniam cum officia. Asperiores, itaque.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, necessitatibus et! Labore minus, expedita aliquam a voluptatem accusamus delectus nostrum ipsum ut culpa at officia odio, autem laudantium repellat corporis voluptas harum accusantium eum. Aliquid esse molestias sit veritatis officia laborum, voluptatum labore odit non in suscipit. Impedit architecto doloremque velit ipsa ipsum necessitatibus at tempore, quisquam ex maiores in deleniti autem voluptates enim quia adipisci similique cupiditate ratione mollitia quae earum. Reprehenderit unde reiciendis atque architecto sunt ipsam dolorum ex autem impedit neque accusamus magnam quisquam voluptates ipsum fugit similique quas quae, doloribus sequi veniam cum officia. Asperiores, itaque.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, necessitatibus et! Labore minus, expedita aliquam a voluptatem accusamus delectus nostrum ipsum ut culpa at officia odio, autem laudantium repellat corporis voluptas harum accusantium eum. Aliquid esse molestias sit veritatis officia laborum, voluptatum labore odit non in suscipit. Impedit architecto doloremque velit ipsa ipsum necessitatibus at tempore, quisquam ex maiores in deleniti autem voluptates enim quia adipisci similique cupiditate ratione mollitia quae earum. Reprehenderit unde reiciendis atque architecto sunt ipsam dolorum ex autem impedit neque accusamus magnam quisquam voluptates ipsum fugit similique quas quae, doloribus sequi veniam cum officia. Asperiores, itaque.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, necessitatibus et! Labore minus, expedita aliquam a voluptatem accusamus delectus nostrum ipsum ut culpa at officia odio, autem laudantium repellat corporis voluptas harum accusantium eum. Aliquid esse molestias sit veritatis officia laborum, voluptatum labore odit non in suscipit. Impedit architecto doloremque velit ipsa ipsum necessitatibus at tempore, quisquam ex maiores in deleniti autem voluptates enim quia adipisci similique cupiditate ratione mollitia quae earum. Reprehenderit unde reiciendis atque architecto sunt ipsam dolorum ex autem impedit neque accusamus magnam quisquam voluptates ipsum fugit similique quas quae, doloribus sequi veniam cum officia. Asperiores, itaque.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, necessitatibus et! Labore minus, expedita aliquam a voluptatem accusamus delectus nostrum ipsum ut culpa at officia odio, autem laudantium repellat corporis voluptas harum accusantium eum. Aliquid esse molestias sit veritatis officia laborum, voluptatum labore odit non in suscipit. Impedit architecto doloremque velit ipsa ipsum necessitatibus at tempore, quisquam ex maiores in deleniti autem voluptates enim quia adipisci similique cupiditate ratione mollitia quae earum. Reprehenderit unde reiciendis atque architecto sunt ipsam dolorum ex autem impedit neque accusamus magnam quisquam voluptates ipsum fugit similique quas quae, doloribus sequi veniam cum officia. Asperiores, itaque.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, necessitatibus et! Labore minus, expedita aliquam a voluptatem accusamus delectus nostrum ipsum ut culpa at officia odio, autem laudantium repellat corporis voluptas harum accusantium eum. Aliquid esse molestias sit veritatis officia laborum, voluptatum labore odit non in suscipit. Impedit architecto doloremque velit ipsa ipsum necessitatibus at tempore, quisquam ex maiores in deleniti autem voluptates enim quia adipisci similique cupiditate ratione mollitia quae earum. Reprehenderit unde reiciendis atque architecto sunt ipsam dolorum ex autem impedit neque accusamus magnam quisquam voluptates ipsum fugit similique quas quae, doloribus sequi veniam cum officia. Asperiores, itaque.
-  </main>
+    <aside class="right-nav">
+      <a class="" href="">
+        <img id="right-avatar" class="user-avatar" src="icon/header/user_icon.png" alt="user icon">
+        <span class="rigth-user-name">Константин</span>
+      </a>
+      <ul>
+        <li>News Feed</li>
+        <li>Messages</li>
+        <li>Marketplace</li>
+      </ul>
+      <p>Shortcuts</p>
+      <ul>
+        <li>Product Design</li>
+        <li>UX & UI</li>
+        <li>Figma</li>
+        <li>Ant Design</li>
+      </ul>
+      <p>Explore</p>
+      <ul>
+        <li>Pages</li>
+        <li>Groups</li>
+        <li>Events</li>
+        <li>Games</li>
+      </ul>
+    </aside>
+    <main>
+    
+    </main>
 </div>
 <script src="app.js"></script>
 </body>
