Icon in right menu

--- a/index.html
+++ b/index.html
@@ -59,24 +59,31 @@
         <span class="rigth-user-name">Константин</span>
       </a>
       <ul>
-        <li>News Feed</li>
-        <li>Messages</li>
-        <li>Marketplace</li>
+        <li><img src="icon/right-nav/news.svg"> News Feed</li>
+        <li><img src="icon/right-nav/message.svg"> Messages</li>
+        <li><img src="icon/right-nav/shop.svg"> Marketplace</li>
       </ul>
       <p>Shortcuts</p>
       <ul>
-        <li>Product Design</li>
-        <li>UX & UI</li>
-        <li>Figma</li>
-        <li>Ant Design</li>
+        <li><img src="icon/right-nav/trophy.svg"> Product Design</li>
+        <li><img src="icon/right-nav/trophy.svg"> UX & UI</li>
+        <li><img src="icon/right-nav/trophy.svg"> Figma</li>
+        <li><img src="icon/right-nav/trophy.svg"> Ant Design</li>
       </ul>
       <p>Explore</p>
       <ul>
-        <li>Pages</li>
-        <li>Groups</li>
-        <li>Events</li>
-        <li>Games</li>
+        <li><img src="icon/right-nav/flag.svg"> Pages</li>
+        <li><img src="icon/right-nav/customer-service.svg"> Groups</li>
+        <li><img src="icon/right-nav/home.svg"> Events</li>
+        <li><img src="icon/right-nav/rocket.svg"> Games</li>
       </ul>
+      <details>
+        <summary>See more...</summary>
+        <ul>
+          <li>Developers</li>
+          <li>Advertising</li>
+        </ul>
+      </details>
     </aside>
     <main>
     
